@@ -1,6 +1,5 @@
 package com.chess.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -10,47 +9,19 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
-/**
- * Configuración de CORS para permitir requests del frontend.
- * 
- * En desarrollo: permite http://localhost:5173 (Vite dev server)
- * En producción: configurar la URL del frontend deployed.
- */
 @Configuration
 public class CorsConfig {
-
-    @Value("${cors.allowed-origins}")
-    private String allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // Orígenes permitidos (del application.properties)
-        configuration.setAllowedOrigins(
-            Arrays.asList(allowedOrigins.split(","))
-        );
-
-        // Métodos HTTP permitidos
-        configuration.setAllowedMethods(
-            Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS")
-        );
-
-        // Headers permitidos
-        configuration.setAllowedHeaders(
-            Arrays.asList("Authorization", "Content-Type", "X-Requested-With")
-        );
-
-        // Permitir envío de cookies/credenciales
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(false);
 
-        // Tiempo de caché para preflight requests (1 hora)
-        configuration.setMaxAge(3600L);
-
-        // Aplicar a todos los endpoints
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", configuration);
-
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
